fix scrollbar style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,4 +46,31 @@ table {
 
 *{
 	box-sizing: border-box;
+	
+	
+
+}
+
+::-webkit-scrollbar {
+	width: 16px;
+	height: 16px;
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+::-webkit-scrollbar-track:hover {
+	background: rgba(250, 250, 250, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+	border: 5px solid rgba(0, 0, 0, 0);
+	background-clip: padding-box;
+	border-radius: 10px;
+	background-color: rgba(124, 124, 124, 0.6);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	border: 4px solid rgba(0, 0, 0, 0);
 }
